[workspace]
members = [
    "control-panel/api",
    "control-panel/implementation",
    "control-panel/macro",

    "hosts/linux",
    "hosts/win",

    "libraries/misc",
    "libraries/core",
    "libraries/ipc",
    "libraries/x11-wrapper",

    "workflow"
]

[profile.release]
lto = true
codegen-units = 1
