[package]
name = "snowland-control-panel-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.85", features = ["proc-macro", "extra-traits", "parsing", "full"] }
quote = "1.0.14"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
