[package]
name = "snowland-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
log = "0.4.14"
bincode = { version = "2.0.0-beta.0", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
mio = { version = "0.8.0", optional = true }
mio-misc = { version = "2.0.0", optional = true }

[features]
poll = ["mio", "mio-misc"]
