[package]
name = "snowland-linux-host"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
log = "0.4.14"
pretty_env_logger = "0.4.0"
x11 = { version = "2.19.1", features = ["xlib", "glx"] }

snowland-universal = { path = "../universal" }
snowland-x11-wrapper = { path = "../x11-wrapper" }
