[package]
name = "snowland-linux-host"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
log = "0.4.14"
pretty_env_logger = "0.4.0"
clap = { version = "3.0.0-rc.9", features = ["derive"] }
skia-safe = { version = "0.45.1", features = ["gl"] }

snowland-universal = { path = "../universal" }
snowland-x11-wrapper = { path = "../x11-wrapper" }

