[package]
name = "snowland-universal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
skia-safe = "0.45.0"
thiserror = "1.0.30"
rand = "0.8.4"
chrono = "0.4.19"
iui = { git = "https://github.com/Janrupf/libui-rs", branch = "trunk" }
