[package]
name = "snowland-universal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
skia-safe = { version = "0.45.1", features = ["gl"] }
thiserror = "1.0.30"
rand = "0.8.4"
chrono = "0.4.19"

snowland-ipc = { path = "../ipc" }

glium = "0.30.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
