[package]
name = "snowland-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
log = "0.4.14"
bincode = { version = "2.0.0-beta.0", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
mio = { version = "0.8.0", optional = true, features = ["os-ext"] }
mio-misc = { version = "2.0.0", optional = true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.28.0"
features = [
    "std",
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO"
]

[features]
poll = ["mio", "mio-misc"]
